tests/neg-custom-args/captures/classifiers-secondclass.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/classifiers-secondclass.scala:41:28 ----------------------
41 |      parReduce(1 to 1000): (a, b) => // error
   |                            ^
   |Found:    (a: Int, b: Int) ->{f.write, f.read} Int
   |Required: (Int, Int) ->{any.only[Read]} Int
   |
   |Note that capability `f.write` is not included in capture set {any.only[Read]}.
   |
   |where:    any is a root capability created in anonymous function of type (f²: Levels.File^): Unit when checking argument to parameter op of method parReduce
   |
42 |        f.write(42)         // the error stems from here
43 |        a + b + f.read()    // ok
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/classifiers-secondclass.scala:53:30 ----------------------
53 |        parReduce(1 to 1000): (a, b) => // error
   |                              ^
   |Found:    (a: Int, b: Int) ->{f.write, f.read, g.read} Int
   |Required: (Int, Int) ->{any.only[Read]} Int
   |
   |Note that capability `f.write` is not included in capture set {any.only[Read]}.
   |
   |where:    any is a root capability created in anonymous function of type (g²: Levels.File^): Unit when checking argument to parameter op of method parReduce
   |
54 |          f.write(42)         // the error stems from here
55 |          a + b + f.read() + g.read() // ok
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/classifiers-secondclass.scala:56:30 ----------------------
56 |        parReduce(1 to 1000): (a, b) => // error
   |                              ^
   |Found:    (a: Int, b: Int) ->{g.write} Int
   |Required: (Int, Int) ->{any.only[Read]} Int
   |
   |Note that capability `g.write` is not included in capture set {any.only[Read]}.
   |
   |where:    any is a root capability created in anonymous function of type (g²: Levels.File^): Unit when checking argument to parameter op of method parReduce
   |
57 |          g.write(42)         // the error stems from here
58 |          0
   |
   | longer explanation available when compiling with `-explain`
